# daily_research_paper_summary

./: .config  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  test_grok.py  ui_page.html.txt  verify_setup.py
src/paper_digest/: llm.py
src/paper_digest/agents/: curator.py  notebook.py  quiz.py  ranker.py
src/paper_digest/auth/: __init__.py  config.py  oauth.py
src/paper_digest/graph/: pipeline.py  state.py
src/paper_digest/notifications/: __init__.py  email.py
src/paper_digest/scheduler/: tasks.py
src/paper_digest/storage/: crypto.py  database.py
src/paper_digest/tools/: arxiv_tool.py
src/paper_digest/ui/: app.py
src/paper_digest/ui/templates/: index.html  settings.html
tests/: test_arxiv_tool.py  test_curator.py  test_dtabase.py  test_notebook.py  test_quiz.py  test_ranker.py
