[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-digest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/paper_digest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
target-version = "py313"